# python_template

./: README.md  cspell.json  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: deploy.yml  test.yml
examples/: example.py
my_project/: __init__.py
tests/: import_test.py
